--- a/index.html
+++ b/index.html
@@ -2,12 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>ping-pong</title>
+    <title>Pong Game JavaScript</title>
+    <style>
+      body {
+        background-color: dimgray;
+      }
+      #pong {
+        border: 2px solid #fff;
+        position: absolute;
+        margin: auto;
+        top: 0;
+        right: 0;
+        left: 0;
+        bottom: 0;
+      }
+    </style>
   </head>
-
   <body>
     <canvas id="pong" width="600" height="400"></canvas>
     <script src="app.js"></script>
